// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonToggle control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "hoverColor": "#c0c0c0",
    }
  }
>
  <Button
    bgColorOff="inherit"
    bgColorOn="inherit"
    className="ui-button-toggle test-class"
    contentEditable={false}
    direction="right"
    disabled={false}
    fgColorOff="gray"
    fgColorOn="black"
    focus={false}
    height=""
    iconName="bomb"
    iconNameOff="bomb"
    iconNameOn="bomb"
    iconStyle=""
    id=""
    initialToggle={false}
    location="none"
    noedit={false}
    nohover={false}
    noripple={true}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "gray",
      }
    }
    testing={true}
    theme={Object {}}
    visible={true}
    width=""
    xcss={null}
  />
</ThemeProvider>
`;

exports[`Test creation of a ButtonToggle control with on/off icons 1`] = `
<ButtonToggle
  bgColorOff="inherit"
  bgColorOn="inherit"
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height=""
  iconName="bomb"
  iconNameOff="star-o"
  iconNameOn="star"
  iconStyle=""
  id=""
  initialToggle={false}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#c0c0c0",
      }
    }
  >
    <Button
      bgColorOff="inherit"
      bgColorOn="inherit"
      className="ui-button-toggle"
      contentEditable={false}
      direction="right"
      disabled={false}
      fgColorOff="gray"
      fgColorOn="black"
      focus={false}
      height=""
      iconName="star-o"
      iconNameOff="star-o"
      iconNameOn="star"
      iconStyle=""
      id=""
      initialToggle={false}
      location="none"
      noedit={false}
      nohover={false}
      noripple={true}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "gray",
        }
      }
      testing={true}
      theme={Object {}}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#c0c0c0",
          }
        }
      >
        <styled.div
          className="ui-button nohover ui-button-toggle"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "gray",
            }
          }
          visible={true}
        >
          <div
            className="ui-button nohover ui-button-toggle sc-bdVaJa crSebe"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "inherit",
                "color": "gray",
              }
            }
          >
            <Icon
              className=""
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="star-o"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={Object {}}
              visible={true}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#004358",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "hoverColor": "#c0c0c0",
                  }
                }
              >
                <Icon__FontAwesome
                  className="ui-icon fa fa-fw fa-star-o"
                  sizing="normal"
                  style={Object {}}
                >
                  <i
                    className="ui-icon fa fa-fw fa-star-o Icon__FontAwesome-kBRBjz jFGZDN"
                    style={Object {}}
                  />
                </Icon__FontAwesome>
              </ThemeProvider>
            </Icon>
          </div>
        </styled.div>
      </ThemeProvider>
    </Button>
  </ThemeProvider>
</ButtonToggle>
`;

exports[`Test disabling of a ButtonToggle 1`] = `
<ButtonToggle
  bgColorOff="inherit"
  bgColorOn="inherit"
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height=""
  iconName="bomb"
  iconNameOff="bomb"
  iconNameOn="bomb"
  iconStyle=""
  id=""
  initialToggle={false}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#c0c0c0",
      }
    }
  >
    <Button
      bgColorOff="inherit"
      bgColorOn="inherit"
      className="ui-button-toggle"
      contentEditable={false}
      direction="right"
      disabled={true}
      fgColorOff="gray"
      fgColorOn="black"
      focus={false}
      height=""
      iconName="bomb"
      iconNameOff="bomb"
      iconNameOn="bomb"
      iconStyle=""
      id=""
      initialToggle={false}
      location="none"
      noedit={false}
      nohover={false}
      noripple={true}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "gray",
        }
      }
      testing={true}
      theme={Object {}}
      visible={true}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#c0c0c0",
          }
        }
      >
        <styled.div
          className="ui-button nohover ui-button-toggle"
          disabled={true}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "gray",
            }
          }
          visible={true}
        >
          <div
            className="ui-button nohover ui-button-toggle sc-bdVaJa ljVASa"
            disabled={true}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "inherit",
                "color": "gray",
              }
            }
          >
            <Icon
              className=""
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={Object {}}
              visible={true}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#004358",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "hoverColor": "#c0c0c0",
                  }
                }
              >
                <Icon__FontAwesome
                  className="ui-icon fa fa-fw fa-bomb"
                  sizing="normal"
                  style={Object {}}
                >
                  <i
                    className="ui-icon fa fa-fw fa-bomb Icon__FontAwesome-kBRBjz jFGZDN"
                    style={Object {}}
                  />
                </Icon__FontAwesome>
              </ThemeProvider>
            </Icon>
          </div>
        </styled.div>
      </ThemeProvider>
    </Button>
  </ThemeProvider>
</ButtonToggle>
`;

exports[`Test making a ButtonToggle invisible 1`] = `
<ButtonToggle
  bgColorOff="inherit"
  bgColorOn="inherit"
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  fgColorOff="gray"
  fgColorOn="black"
  focus={false}
  height=""
  iconName="bomb"
  iconNameOff="bomb"
  iconNameOn="bomb"
  iconStyle=""
  id=""
  initialToggle={false}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={Object {}}
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#c0c0c0",
      }
    }
  >
    <Button
      bgColorOff="inherit"
      bgColorOn="inherit"
      className="ui-button-toggle"
      contentEditable={false}
      direction="right"
      disabled={false}
      fgColorOff="gray"
      fgColorOn="black"
      focus={false}
      height=""
      iconName="bomb"
      iconNameOff="bomb"
      iconNameOn="bomb"
      iconStyle=""
      id=""
      initialToggle={false}
      location="none"
      noedit={false}
      nohover={false}
      noripple={true}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "gray",
        }
      }
      testing={true}
      theme={Object {}}
      visible={false}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#c0c0c0",
          }
        }
      >
        <styled.div
          className="ui-button nohover ui-button-toggle"
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "gray",
            }
          }
          visible={false}
        >
          <div
            className="ui-button nohover ui-button-toggle sc-bdVaJa icpgwB"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "inherit",
                "color": "gray",
              }
            }
          >
            <Icon
              className=""
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={Object {}}
              visible={true}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#004358",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "hoverColor": "#c0c0c0",
                  }
                }
              >
                <Icon__FontAwesome
                  className="ui-icon fa fa-fw fa-bomb"
                  sizing="normal"
                  style={Object {}}
                >
                  <i
                    className="ui-icon fa fa-fw fa-bomb Icon__FontAwesome-kBRBjz jFGZDN"
                    style={Object {}}
                  />
                </Icon__FontAwesome>
              </ThemeProvider>
            </Icon>
          </div>
        </styled.div>
      </ThemeProvider>
    </Button>
  </ThemeProvider>
</ButtonToggle>
`;

exports[`Test retrieval of ButtonToggle props object 1`] = `
Object {
  "bgColorOff": "inherit",
  "bgColorOn": "inherit",
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "fgColorOff": "gray",
  "fgColorOn": "black",
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconNameOff": "bomb",
  "iconNameOn": "bomb",
  "iconStyle": "",
  "id": "",
  "initialToggle": false,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": Object {},
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
